--- a/src/app/components/javascript-logical/javascript-logical.component.html
+++ b/src/app/components/javascript-logical/javascript-logical.component.html
@@ -26,3 +26,61 @@
       </div>  
     </div>
   </div>
+
+<!-- Male details -->
+  <div class="row mt-5">
+    <div class="col-sm-6 mb-3 mb-sm-0">
+      <div class="card">
+        <h1><i class="bi-alarm"></i>Male Details</h1>
+        <div class="card-body">
+          <table class="table">
+            <thead>
+              <tr>
+               
+                <th scope="col">Name</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Age</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of nameList;">
+              <ng-container *ngIf="item.gender==='male'"> 
+                <td>{{item.name}}</td>
+                <td>{{item.gender}}</td>
+                <td>{{item.age}}</td>
+              </ng-container> 
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+<!-- female details  -->
+
+    <div class="col-sm-6">
+      <div class="card">
+        <h1><i class="bi-alarm"></i>Female Details</h1>
+        <div class="card-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of nameList">
+              <ng-container *ngIf="item.gender==='female'">
+                <td>{{item.name}}</td>
+                <td>{{item.gender}}</td>
+                <td>{{item.age}}</td>
+            </ng-container>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
