--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
   <ul class="nav nav-tabs  bg-secondary ">
     <li class="text-light"><h5>Navebar</h5></li>
     <li class="nav-item p-2">
-      <a class="nav-link active" aria-current="" [routerLink]="['']" routerLinkActive="router-link-active" >String-interpolation</a>
+      <a class="nav-link active" aria-current="" [routerLink]="['']" routerLinkActive="" >String-interpolation</a>
     </li>
     <li class="nav-item p-2">
-      <a class="nav-link active" aria-current="" [routerLink]="['binding']" routerLinkActive="router-link-active" >Binding</a>
+      <a class="nav-link active" aria-current="" [routerLink]="['binding']" routerLinkActive="bg-secondary text-light" >Binding</a>
     </li>
     <li class="nav-item p-2">
-      <a class="nav-link active" aria-current="" [routerLink]="['eventBinding']" routerLinkActive="router-link-active" >EventBinding</a>
+      <a class="nav-link active" aria-current="" [routerLink]="['eventBinding']" routerLinkActive="bg-secondary text-light" >EventBinding</a>
     </li>
     <li class="nav-item p-2">
       <a class="nav-link active" aria-current="" [routerLink]="['blog']" routerLinkActive="bg-secondary text-light" >Lazy loding</a>
@@ -17,7 +17,7 @@
       <a class="nav-link active" aria-current="" [routerLink]="['javascript-logical']" routerLinkActive="bg-secondary text-light" >javascriptLogical</a>
     </li>
     <li class="nav-item p-2 ms-auto">
-      <a class="nav-link active" aria-current="" (click)="login()" routerLinkActive="router-link-active" >Sign in</a>
+      <a class="nav-link active" aria-current="" (click)="login()" routerLinkActive="" >Sign in</a>
     </li>
     <li class="nav-item p-2">
       <a class="nav-link active btn bg" aria-current="" (click)="logout()" routerLinkActive="router-link-active" >Sign Out</a>
