--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
     <li class="nav-item p-2">
       <a class="nav-link active" aria-current="" [routerLink]="['javascript-logical']" routerLinkActive="bg-secondary text-light" >javascriptLogical</a>
     </li>
+    <li class="nav-item p-2">
+      <a class="nav-link active" aria-current="" [routerLink]="['formarray']" routerLinkActive="bg-secondary text-light" >Form Array</a>
+    </li>
     <li class="nav-item p-2 ms-auto">
       <a class="nav-link active" aria-current="" (click)="login()" routerLinkActive="" >Sign in</a>
     </li>
